crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@inline_pcode.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2/inline_pcode.as
---
Ok:
  initial_script:
    - Expr:
        span:
          start: 0
          end: 207
        value:
          Function:
            signature:
              name:
                span:
                  start: 9
                  end: 26
                value: traceThroughPcode
              args:
                - name: message
                  type_name: ~
              return_type: ~
            body:
              - Expr:
                  span:
                    start: 42
                    end: 88
                  value:
                    Trace:
                      span:
                        start: 48
                        end: 87
                      value:
                        Constant:
                          String: "-- start of a very special message --"
              - InlinePCode: "\n        Push \"message\"\n        GetVariable\n        Trace\n    "
              - Expr:
                  span:
                    start: 170
                    end: 204
                  value:
                    Trace:
                      span:
                        start: 176
                        end: 203
                      value:
                        Constant:
                          String: "-- end special message --"
    - Expr:
        span:
          start: 209
          end: 243
        value:
          Call:
            name:
              span:
                start: 209
                end: 226
              value:
                Constant:
                  Identifier: traceThroughPcode
            args:
              - span:
                  start: 227
                  end: 242
                value:
                  Constant:
                    String: "Hello, world!"
  interfaces: []
  classes: []
